[package]
name = "tokio-zookeeper"
version = "0.1.0"
edition = "2018"

description = "Asynchronous client library for interacting with Apache ZooKeeper"
readme = "README.md"

authors = ["Isaac Davis <isaac.davis@joyent.com>", "Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/joyent/tokio-zookeeper"
repository = "https://github.com/joyent/tokio-zookeeper.git"

keywords = ["zookeeper", "tokio", "asynchronous"]
categories = ["api-bindings", "asynchronous", "network-programming"]

license = "MIT/Apache-2.0"

[dependencies]
async-trait = "0.1"
backoff = "0.1"
byteorder = "1.3"
bytes = "0.5"
clap = "2.33"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
lazy_static = "1.4"
slog = "2.5"
slog-async = "2.5"
slog-bunyan = "2.2"
tokio = { version = "0.2", features = ["io-util", "rt-core", "sync", "tcp", "time"] }
tokio-util = { version = "0.3", features = ["codec"] }

[dev-dependencies]
slog-async = "2.4.0"
slog-term = "2.5.0"
